# pizza-competition

./: .gitignore  dataset.csv  evaluator.py  pyproject.toml  solver_v1.py  solver_v10.py  solver_v2.py  solver_v3.py  solver_v4.py  solver_v5.py  solver_v6.py  solver_v7.py  solver_v8.py  solver_v9.py  starter.py
solutions/: sol_17882_solve_v10_20250401_153029.txt  sol_18108_solve_v5_20250130_165028.txt  sol_18164_solve_v5_20250130_165056.txt  sol_18186_solve_v5_20250130_164927.txt  sol_18282_solve_v4_20250130_162052.txt
